# cw1-ibc-hooks

./: .gitignore  Cargo.toml  package.json
src/: contract.rs  lib.rs  msg.rs
tests/: cw1-hook.spec.ts
